Challenge 3 plus bit more

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html >
 <!-- #1 #structure #document -->
-<html>
+<html lang="en">
 <head>
 
     <!-- #1 #structure #title -->
@@ -47,13 +47,6 @@
             text-transform: uppercase;
         }
 
-
-        /*styles for channel area*/
-        h2 {
-            /* #2 #colorful #channelandchat */
-            background-color: white;
-        }
-
         /*styles for chat area*/
         p {
             /* #2 #colorful #channelandchat */
@@ -73,7 +66,12 @@
         em {
             /* #2 #font #remaining overrides the default italic appearance of em elements*/
             font-size: larger;
-            font-style: normal;
+        }
+           
+        a {
+            /* Set all link color to primary text color */
+            /* Change the preset link color to primary text color */
+            color: #3F51B5
         }
 
     </style>
@@ -82,110 +80,148 @@
 
 <body>
 
-<!-- channel area -->
-<!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
+<div style="width: 20%">
+    <!-- channel area -->
+    <!-- #1 #channels #app-bar -->
+    <h1><img src="https://ip.lfe.mw.tum.de/sections/moocus.png" style="height: 56px;" alt="Moocus, a very talkative duck">chatter|app</h1>
 
-<!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
-<h2>#SevenContinents</h2>
-<h2>#KillerApp</h2>
-<h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
+    <!-- #1 #channels #topics -->
+    <!-- Set background to white -->
+    <div style="background-color: white">
+        <!-- Remove the bullets by using CSS -->
+        <ul style="list-style-type: none">
+            <!-- Each channel marked as favorite or not by adding image -->
+            <li>#Yummy<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="likeable channel"></li>
+            <li>#SevenContinents<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="likeable channel"></li>
+            <li>#KillerApp<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="not likeable channel"></li>
+            <li>#FirstPersonOnMars<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="not likeable channel"></li>
+            <li>#Octoberfest<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="not likeable channel"></li>
+        </ul>
+        <!-- #1 #channels #buttons -->
+        <!-- button background white, its not needed as it already white from the above div, but its here to satisfy the requirements -->
+        <div style="background-color: white">
+            <!-- Each button get its own image -->
+            <button>new<img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt="light bulb o"></button>
+            <button>trending<img src="https://ip.lfe.mw.tum.de/sections/fire.png" alt="fire"></button>
+            <button>favorites<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="star"></button>
+        </div>
+    </div>
+</div>
 
-<!-- #1 #channels #buttons -->
-<button>new</button>
-<button>trending</button>
-<button>favorites</button>
+<!-- Make these containers use 80% of the browser’s width -->
+<div style="width: 80%">
+    <!-- chat area -->
+    <!-- #1 #chat #name -->
+    <h1>#SevenContinents
+        <!-- #1 #chat #location is wrapped in small tag-->
+        <small>by
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <strong>cheeses.yard.applies</strong>
+        </small>
+    </h1>
 
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <!-- Group each chat message in a container -->
+    <div>
+        <h3>
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <!-- Connect the message creator locations with the w3w service. The map with the corresponding location be opened in a new tab. -->
+            <strong><a href="https://w3w.co/cheeses.yard.applies" target="_blank">cheeses.yard.applies</a></strong>
+            Wed, June 20th, 13:37
+            <!-- #1 #chat #ttl lives inside the metadata -->
+            <em>15 min. left</em>
+        </h3>
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>What's the place you folks call home?</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
-<!-- chat area -->
-<!-- #1 #chat #name -->
-<h1>#SevenContinents
-    <!-- #1 #chat #location is wrapped in small tag-->
-    <small>by
-        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-        <strong>cheeses.yard.applies</strong>
-    </small>
-</h1>
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <!-- Group each chat message in a container -->
+    <div>
+        <h3>
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <!-- Connect the message creator locations with the w3w service. The map with the corresponding location be opened in a new tab. -->
+            <strong><a href="https://w3w.co/truck.cotton.zone" target="_blank">truck.cotton.zone</a></strong>
+            Wed, June 20th, 13:39
+            <!-- #1 #chat #ttl lives inside the metadata -->
+            <em>4 min. left</em>
+        </h3>
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>BRISBANE! Hang loose!</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>cheeses.yard.applies</strong>
-    Wed, June 20th, 13:37
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>What's the place you folks call home?</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <!-- Group each chat message in a container -->
+    <div>
+        <h3>
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <!-- Connect the message creator locations with the w3w service. The map with the corresponding location be opened in a new tab. -->
+            <strong><a href="https://w3w.co/thus.best.dishes" target="_blank">thus.best.dishes</a></strong>
+            Wed, June 20th, 14:02
+            <!-- #1 #chat #ttl lives inside the metadata -->
+            <em>12 min. left</em>
+        </h3>
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>The big apple.</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>truck.cotton.zone</strong>
-    Wed, June 20th, 13:39
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>4 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>BRISBANE! Hang loose!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <!-- Group each chat message in a container -->
+    <div>
+        <h3>
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <!-- Connect the message creator locations with the w3w service. The map with the corresponding location be opened in a new tab. -->
+            <strong><a href="https://w3w.co/driveway.helper.magazine" target="_blank">driveway.helper.magazine</a></strong>
+            Wed, June 20th, 14:02
+            <!-- #1 #chat #ttl lives inside the metadata -->
+            <em>7 min. left</em>
+        </h3>
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>Eu sou um Carocas.</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>thus.best.dishes</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>12 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>The big apple.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <!-- Group each chat message in a container -->
+    <div>
+        <h3>
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <!-- Connect the message creator locations with the w3w service. The map with the corresponding location be opened in a new tab. -->
+            <strong><a href="https://w3w.co/escapes.pitch.saucepan" target="_blank">escapes.pitch.saucepan</a></strong>
+            Wed, June 20th, 14:07
+            <!-- #1 #chat #ttl lives inside the metadata -->
+            <em>14 min. left</em>
+        </h3>
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>Greetings from the western cape!</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>driveway.helper.magazine</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>7 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Eu sou um Carocas.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>escapes.pitch.saucepan</strong>
-    Wed, June 20th, 14:07
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>14 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Greetings from the western cape!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time  -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>meanings.identity.pays</strong>
-    Wed, June 20th, 04:08
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>北京</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
+    <!-- Group each chat message in a container -->
+    <div>
+        <h3>
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <!-- Connect the message creator locations with the w3w service. The map with the corresponding location be opened in a new tab. -->
+            <strong><a href="https://w3w.co/meanings.identity.pays" target="_blank">meanings.identity.pays</a></strong>
+            Wed, June 20th, 04:08
+            <!-- #1 #chat #ttl lives inside the metadata -->
+            <em>15 min. left</em>
+        </h3>
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>北京</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
+</div>
 
 </body>
 </html>
